# shop_app

./: .gitignore  pyproject.toml  pytest.ini
migrations/: env.py
src/: configs.py  database.py  main.py  models.py  session_create.py  unit_of_work.py  utils.py
src/auth/: admin.py  authentiaction_backend.py  f_users.py  models.py  schemas.py  user_manager.py
src/interfaces/: abs_repository.py
src/orders/: models.py
src/products/: models.py  repository.py  routers.py  schemas.py
src/services/: email_service.py
src/tests/: conftest.py
src/tests/test_products/: conftest.py  test_repositories.py  test_views.py
