[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Nerses"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
alembic = "^1.15.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
pytz = "^2025.2"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
